--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,8 +4,10 @@ html {
 }
 body {
   background-color: $white;
+  color: $dark-grey;
   font-family: Helvetica, Arial, sans-serif;
   font-size: $m-size;
+  line-height: 1.6;
 }
 
 h1 {
@@ -16,7 +18,6 @@ h1 {
 button {
   cursor: pointer; // hand cursor
 }
-
 
 button:disabled {
   cursor: default; // arrow cursor
