--- a/src/styles/base/_theme.scss
+++ b/src/styles/base/_theme.scss
@@ -1,5 +1,11 @@
 // Colors
+$blue: #1C88BF;
+$dark-blue: #364051;
+$dark-grey: #333333;
 $white: #ffffff;
+
+// Font Size
+$font-size-large: 1.8rem;
 
 // Spacing
 $s-size: 1.2rem;
