--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,22 +1,19 @@
 .header {
-  background: $off-black; 
-  color: #fff;
-  margin-bottom: $m-size;
-
-  @media (min-width: $desktop-breakpoint) {
-    margin-bottom: $xl-size;
+  background: $dark-blue;
+  
+  &__content {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: $s-size 0;
   }
-  padding: $m-size 0;
 
   &__title {
-    font-size: $l-size;
-    margin: 0;
-  }
+    color: $white;
+    text-decoration: none;
 
-  &__subtitle {
-    color: $off-white;
-    font-size: $m-size;
-    font-weight: 500;
-    margin: 0;
+    h1 {
+      margin: 0;
+    }
   }
 }
