--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,6 @@
 @import './base/theme';
 @import './base/base';
+@import './components/content-container';
+@import './components/box-layout';
+@import './components/button';
+@import './components/Header';
