--- a/src/styles/base/_theme.scss
+++ b/src/styles/base/_theme.scss
@@ -2,10 +2,13 @@
 $blue: #1C88BF;
 $dark-blue: #364051;
 $dark-grey: #333333;
+$grey: #666666;
+$off-white: #f7f7f7;
 $white: #ffffff;
 
 // Font Size
 $font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 // Spacing
 $s-size: 1.2rem;
