--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,4 +3,12 @@
 @import './components/content-container';
 @import './components/box-layout';
 @import './components/button';
+@import './components/form';
+@import './components/inputs';
+@import './components/input-group';
+@import './components/list';
+@import './components/loader';
+@import './components/page-header';
 @import './components/Header';
+@import './components/visibility';
+
