--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,5 +10,6 @@
 @import './components/loader';
 @import './components/page-header';
 @import './components/Header';
+/* test */
 @import './components/visibility';
 
