Change case of file name for sass

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,6 +9,6 @@
 @import './components/list';
 @import './components/loader';
 @import './components/page-header';
-// @import './components/Header';
+@import './components/Header';
 @import './components/visibility';
 
