--- a/src/styles/components/_Header.scss
+++ b/src/styles/components/_Header.scss
@@ -1,6 +1,13 @@
 .header {
   background: $dark-blue; 
 
+  &__content {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: $s-size 0;
+  }
+
   &__title {
     color: $white;
     text-decoration: none;
